Commands UI rewrite: simple index page, one command page per supplier
fixes #140 where the command page didn't load with more than 150 cards.
fixes #126 "Commands: for each supplier, easily add books (UI rewrite)"

--- a/templates/search/commands_ongoing.jade
+++ b/templates/search/commands_ongoing.jade
@@ -75,10 +75,10 @@ div(ng-cloak, ng-controller="CommandsOngoingController")
           th.text-right {% trans "Total incl. taxes" %}
 
         tbody
-          tr(ng-repeat="cmd in commands", ng-mouseenter="show_icon[$index]=true", ng-mouseleave="show_icon[$index]=false")
+          tr(ng-repeat="cmd in commands track by cmd.distributor_id", ng-mouseenter="show_icon[$index]=true", ng-mouseleave="show_icon[$index]=false")
             td {{ 'cmd.id' | ng }}
             td
-              a(href="/commands/{{ 'cmd.id' | ng }}") {{ 'cmd.supplier_name | uppercase' | ng }}
+              a(href="/commands/{{ 'cmd.id' | ng }}") {{ 'cmd.distributor_name | uppercase' | ng }}
 
             td {{ 'cmd.created | date: "short" ' | ng }}  
 
