(minor) fix pagination label nb_results

--- a/templates/search/to_command.jade
+++ b/templates/search/to_command.jade
@@ -178,7 +178,7 @@ div(ng-cloak, ng-controller="basketToCommandController")
                      li.page-item
                        a.page-link(ng-click="previousPage()") <
                      li.page-item
-                       a.page-link Page {{ 'page' | ng }} / {{ 'meta.num_pages' | ng }} ({{ 'meta.nb_copies_no_dist' | ng }})
+                       a.page-link Page {{ 'page' | ng }} / {{ 'meta.num_pages' | ng }} ({{ 'meta.nb_results' | ng }})
                      li.page-item
                        a.page-link(ng-click="nextPage()") >
                      li.page-item
