--- a/templates/search/inventory_view_component.jade
+++ b/templates/search/inventory_view_component.jade
@@ -133,7 +133,7 @@ div(ng-controller=controller)
         tr.repeated-item(ng-show="cards_to_show", ng-repeat="card in cards_to_show")
 
          td.col-md-6
-          a(href="{{ 'card.details_url ' | ng }}") {{ 'card.title' | ng }}
+          a(href="{{ 'card.url ' | ng }}") {{ 'card.title' | ng }}
          td.col-md-3
           span {{ 'card.authors_repr' | ng }}
           i.glyphicon.glyphicon-warning-sign(
