Card show: add card creation date (to complement missing last entry)
the last entry exists if the card where added to a place.

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -154,6 +154,9 @@ div#abelujo
           td {{ object.alert_set.count }}
 
         tr
+          td {% trans "Card creation" %}
+          td {{ object.created }}
+        tr
           td {% trans "Last entry" %}
           td {{ last_entry.created }}
             //- if not last_entry
