fix Command export
fixes https://sentry.io/organizations/vindarel/issues/1069123429/?project=163026&query=is%3Aunresolved&statsPeriod=14d

--- a/templates/pdftemplates/pdf-barcode.jade
+++ b/templates/pdftemplates/pdf-barcode.jade
@@ -34,7 +34,7 @@ head
 
   body
 
-    h2#header_content(style="{text-align: center;}")  {{ list_name }}
+    h2#header_content(style="{text-align: center;}")  {{ name }}
     em {{ date }}
 
     table
